# digitalisation_2dlayout

./: .gitignore  CMakeLists.txt
_exampleODB/One-Air-Max-odb/matrix/: matrix
_exampleODB/One-Air-Max-odb/misc/: info
_exampleODB/One-Air-Max-odb/steps/pcb/: profile
_exampleODB/ecc83-pp-odb/matrix/: matrix
_exampleODB/ecc83-pp-odb/misc/: info
_exampleODB/ecc83-pp-odb/steps/pcb/: profile
_exampleODB/ecc83-pp-odb/steps/pcb/eda/: data
_exampleODB/ecc83-pp_v2-odb/matrix/: matrix
_exampleODB/ecc83-pp_v2-odb/misc/: info
_exampleODB/ecc83-pp_v2-odb/steps/pcb/: profile  stephdr
_exampleODB/ecc83-pp_v2-odb/steps/pcb/eda/: data
_exampleODB/steps/pcb/eda/: data
_exampleODB/steps/pcb/layers/b.courtyard/: features
_exampleODB/steps/pcb/layers/b.cu/: features
_exampleODB/steps/pcb/layers/b.fab/: features
_exampleODB/steps/pcb/layers/b.mask/: features
_exampleODB/steps/pcb/layers/b.paste/: features
_exampleODB/steps/pcb/layers/b.silkscreen/: features
_exampleODB/steps/pcb/layers/dielectric_1/: attrlist
_exampleODB/steps/pcb/layers/drill_plated_f.cu-b.cu/: features
_exampleODB/steps/pcb/layers/edge.cuts/: features
_exampleODB/steps/pcb/layers/f.fab/: features
_exampleODB/steps/pcb/layers/pwr/: features
_exampleODB/tinytapeout-demo-odb/matrix/: matrix
_exampleODB/tinytapeout-demo-odb/misc/: info
_exampleODB/tinytapeout-demo-odb/steps/pcb/: profile
include/: FeaturesParser.h  MatrixParser.h  OdbParser.h  ProfileParser.h  SymbolTable.h
src/: FeaturesParser.cpp  MatrixParser.cpp  OdbParser.cpp  ProfilParser.cpp  SymbolTable.cpp  main.cpp
(+64 files in other folders)
